--- a/main.tex
+++ b/main.tex
@@ -1,86 +1,166 @@
-\documentclass[a4paper]{article}
-
-\usepackage[english]{babel}
-\usepackage[utf8x]{inputenc}
-\usepackage{amsmath}
-\usepackage{graphicx}
-\usepackage[colorinlistoftodos]{todonotes}
-
-\title{Your Paper}
-\author{You}
-
+\documentclass{article}
+\usepackage[utf8]{inputenc}
+\usepackage{hyperref}
 \begin{document}
-\maketitle
 
-\begin{abstract}
-Your abstract. yolo bith
-\end{abstract}
+\begin{center}
+\Huge{1}
+\end{center}
 
-\section{Introduction}
+\vskip 2cm
+\begin{equation}
+\frac{\partial u}{\partial t} -\alpha\left(\frac{\partial^2u}{\partial x^2}+\frac{\partial^2u}{\partial y^2}+\frac{\partial^2u}{\partial z^2}\right)=0
+\end{equation}
 
-Your introduction goes here! Some examples of commonly used commands and features are listed below, to help you get started. If you have a question, please use the help menu (``?'') on the top bar to search for help or ask us a question. 
-asdsa
+\begin{equation}
+c_p\rho \int_{x-\Delta x}^{x+\Delta x} [u(\xi,t+\Delta t)-u(\xi,t-\Delta t)]\, d\xi = c_p\rho\int_{t-\Delta t}^{t+\Delta t}\int_{x-\Delta x}^{x+\Delta x} \frac{\partial u}{\partial\tau}\,d\xi \, d\tau
+\end{equation}
+\begin{equation}
+k\int_{t-\Delta t}^{t+\Delta t}\left[\frac{\partial u}{\partial x}(x+\Delta x,\tau)-\frac{\partial u}{\partial x}(x-\Delta x,\tau)\right]\,d\tau = k\int_{t-\Delta t}^{t+\Delta t}\int_{x-\Delta x}^{x+\Delta x}\frac{\partial^2u}{\partial\xi^2}\,d\xi\, d\tau
+\end{equation}
 
-\section{Some examples to get started}
+\begin{equation}
+\int_{t-\Delta t}^{t+\Delta t}\int_{x-\Delta x}^{x+\Delta x} [c_p\rho u_\tau - k u_{\xi\xi}]\, d\xi \, d\tau = 0
+\end{equation}
 
-\subsection{How to add Comments}
+\url{http://www.google.com}
 
-Comments can be added to your project by clicking on the comment icon in the toolbar above. % * <john.hammersley@gmail.com> 2014-09-03T09:54:16.211Z:
-%
-% Here's an example comment!
-%
-To reply to a comment, simply click the reply button in the lower right corner of the comment, and you can close them when you're done.
+\url{https://www.google.com}
 
-\subsection{How to include Figures}
+\url{javascript:alert();}
 
-First you have to upload the image file from your computer using the upload link the project menu. Then use the includegraphics command to include it in your document. Use the figure environment and the caption command to add a number and a caption to your figure. See the code for Figure \ref{fig:frog} in this section for an example.
+\newpage
 
-\begin{figure}
-\centering
-\includegraphics[width=0.3\textwidth]{frog.jpg}
-\caption{\label{fig:frog}This frog was uploaded via the project menu.}
-\end{figure}
+\begin{center}
+\Huge{2}
+\end{center}
 
-\subsection{How to add Tables}
+\vskip 2cm
+\begin{equation}
+\frac{\partial u}{\partial t} -\alpha\left(\frac{\partial^2u}{\partial x^2}+\frac{\partial^2u}{\partial y^2}+\frac{\partial^2u}{\partial z^2}\right)=0
+\end{equation}
 
-Use the table and tabular commands for basic tables --- see Table~\ref{tab:widgets}, for example. 
+\begin{equation}
+c_p\rho \int_{x-\Delta x}^{x+\Delta x} [u(\xi,t+\Delta t)-u(\xi,t-\Delta t)]\, d\xi = c_p\rho\int_{t-\Delta t}^{t+\Delta t}\int_{x-\Delta x}^{x+\Delta x} \frac{\partial u}{\partial\tau}\,d\xi \, d\tau
+\end{equation}
+\begin{equation}
+k\int_{t-\Delta t}^{t+\Delta t}\left[\frac{\partial u}{\partial x}(x+\Delta x,\tau)-\frac{\partial u}{\partial x}(x-\Delta x,\tau)\right]\,d\tau = k\int_{t-\Delta t}^{t+\Delta t}\int_{x-\Delta x}^{x+\Delta x}\frac{\partial^2u}{\partial\xi^2}\,d\xi\, d\tau
+\end{equation}
 
-\begin{table}
-\centering
-\begin{tabular}{l|r}
-Item & Quantity \\\hline
-Widgets & 42 \\
-Gadgets & 13
-\end{tabular}
-\caption{\label{tab:widgets}An example table.}
-\end{table}
+\begin{equation}
+\int_{t-\Delta t}^{t+\Delta t}\int_{x-\Delta x}^{x+\Delta x} [c_p\rho u_\tau - k u_{\xi\xi}]\, d\xi \, d\tau = 0
+\end{equation}
 
-\subsection{How to write Mathematics}
+\newpage
 
-\LaTeX{} is great at typesetting mathematics. Let $X_1, X_2, \ldots, X_n$ be a sequence of independent and identically distributed random variables with $\text{E}[X_i] = \mu$ and $\text{Var}[X_i] = \sigma^2 < \infty$, and let
-$$S_n = \frac{X_1 + X_2 + \cdots + X_n}{n}
-      = \frac{1}{n}\sum_{i}^{n} X_i$$
-denote their mean. Then as $n$ approaches infinity, the random variables $\sqrt{n}(S_n - \mu)$ converge in distribution to a normal $\mathcal{N}(0, \sigma^2)$.
+\begin{center}
+\Huge{3}
+\end{center}
+
+\vskip 2cm
+\begin{equation}
+\frac{\partial u}{\partial t} -\alpha\left(\frac{\partial^2u}{\partial x^2}+\frac{\partial^2u}{\partial y^2}+\frac{\partial^2u}{\partial z^2}\right)=0
+\end{equation}
+
+\begin{equation}
+c_p\rho \int_{x-\Delta x}^{x+\Delta x} [u(\xi,t+\Delta t)-u(\xi,t-\Delta t)]\, d\xi = c_p\rho\int_{t-\Delta t}^{t+\Delta t}\int_{x-\Delta x}^{x+\Delta x} \frac{\partial u}{\partial\tau}\,d\xi \, d\tau
+\end{equation}
+\begin{equation}
+k\int_{t-\Delta t}^{t+\Delta t}\left[\frac{\partial u}{\partial x}(x+\Delta x,\tau)-\frac{\partial u}{\partial x}(x-\Delta x,\tau)\right]\,d\tau = k\int_{t-\Delta t}^{t+\Delta t}\int_{x-\Delta x}^{x+\Delta x}\frac{\partial^2u}{\partial\xi^2}\,d\xi\, d\tau
+\end{equation}
+
+\begin{equation}
+\int_{t-\Delta t}^{t+\Delta t}\int_{x-\Delta x}^{x+\Delta x} [c_p\rho u_\tau - k u_{\xi\xi}]\, d\xi \, d\tau = 0
+\end{equation}
+
+\newpage
+
+\begin{center}
+\Huge{4}
+\end{center}
+
+\vskip 2cm
+\begin{equation}
+\frac{\partial u}{\partial t} -\alpha\left(\frac{\partial^2u}{\partial x^2}+\frac{\partial^2u}{\partial y^2}+\frac{\partial^2u}{\partial z^2}\right)=0
+\end{equation}
+
+\begin{equation}
+c_p\rho \int_{x-\Delta x}^{x+\Delta x} [u(\xi,t+\Delta t)-u(\xi,t-\Delta t)]\, d\xi = c_p\rho\int_{t-\Delta t}^{t+\Delta t}\int_{x-\Delta x}^{x+\Delta x} \frac{\partial u}{\partial\tau}\,d\xi \, d\tau
+\end{equation}
+\begin{equation}
+k\int_{t-\Delta t}^{t+\Delta t}\left[\frac{\partial u}{\partial x}(x+\Delta x,\tau)-\frac{\partial u}{\partial x}(x-\Delta x,\tau)\right]\,d\tau = k\int_{t-\Delta t}^{t+\Delta t}\int_{x-\Delta x}^{x+\Delta x}\frac{\partial^2u}{\partial\xi^2}\,d\xi\, d\tau
+\end{equation}
+
+\begin{equation}
+\int_{t-\Delta t}^{t+\Delta t}\int_{x-\Delta x}^{x+\Delta x} [c_p\rho u_\tau - k u_{\xi\xi}]\, d\xi \, d\tau = 0
+\end{equation}
+
+\newpage
 
 
-\subsection{How to create Sections and Subsections}
+\begin{center}
+\Huge{5}
+\end{center}
 
-Use section and subsections to organize your document. Simply use the section and subsection buttons in the toolbar to create them, and we'll handle all the formatting and numbering automatically.
+\vskip 2cm
+\begin{equation}
+\frac{\partial u}{\partial t} -\alpha\left(\frac{\partial^2u}{\partial x^2}+\frac{\partial^2u}{\partial y^2}+\frac{\partial^2u}{\partial z^2}\right)=0
+\end{equation}
 
-\subsection{How to add Lists}
+\begin{equation}
+c_p\rho \int_{x-\Delta x}^{x+\Delta x} [u(\xi,t+\Delta t)-u(\xi,t-\Delta t)]\, d\xi = c_p\rho\int_{t-\Delta t}^{t+\Delta t}\int_{x-\Delta x}^{x+\Delta x} \frac{\partial u}{\partial\tau}\,d\xi \, d\tau
+\end{equation}
+\begin{equation}
+k\int_{t-\Delta t}^{t+\Delta t}\left[\frac{\partial u}{\partial x}(x+\Delta x,\tau)-\frac{\partial u}{\partial x}(x-\Delta x,\tau)\right]\,d\tau = k\int_{t-\Delta t}^{t+\Delta t}\int_{x-\Delta x}^{x+\Delta x}\frac{\partial^2u}{\partial\xi^2}\,d\xi\, d\tau
+\end{equation}
 
-You can make lists with automatic numbering \dots
+\begin{equation}
+\int_{t-\Delta t}^{t+\Delta t}\int_{x-\Delta x}^{x+\Delta x} [c_p\rho u_\tau - k u_{\xi\xi}]\, d\xi \, d\tau = 0
+\end{equation}
 
-\begin{enumerate}
-\item Like this,
-\item and like this.
-\end{enumerate}
-\dots or bullet points \dots
-\begin{itemize}
-\item Like this,
-\item and like this.
-\end{itemize}
+\newpage
 
-We hope you find Overleaf useful, and please let us know if you have any feedback using the help menu above.
 
+\begin{center}
+\Huge{6}
+\end{center}
+
+\vskip 2cm
+\begin{equation}
+\frac{\partial u}{\partial t} -\alpha\left(\frac{\partial^2u}{\partial x^2}+\frac{\partial^2u}{\partial y^2}+\frac{\partial^2u}{\partial z^2}\right)=0
+\end{equation}
+
+\begin{equation}
+c_p\rho \int_{x-\Delta x}^{x+\Delta x} [u(\xi,t+\Delta t)-u(\xi,t-\Delta t)]\, d\xi = c_p\rho\int_{t-\Delta t}^{t+\Delta t}\int_{x-\Delta x}^{x+\Delta x} \frac{\partial u}{\partial\tau}\,d\xi \, d\tau
+\end{equation}
+\begin{equation}
+k\int_{t-\Delta t}^{t+\Delta t}\left[\frac{\partial u}{\partial x}(x+\Delta x,\tau)-\frac{\partial u}{\partial x}(x-\Delta x,\tau)\right]\,d\tau = k\int_{t-\Delta t}^{t+\Delta t}\int_{x-\Delta x}^{x+\Delta x}\frac{\partial^2u}{\partial\xi^2}\,d\xi\, d\tau
+\end{equation}
+
+\begin{equation}
+\int_{t-\Delta t}^{t+\Delta t}\int_{x-\Delta x}^{x+\Delta x} [c_p\rho u_\tau - k u_{\xi\xi}]\, d\xi \, d\tau = 0
+\end{equation}
+
+\newpage
+
+
+\begin{center}
+\Huge{7}
+\end{center}
+
+\vskip 2cm
+\begin{equation}
+\frac{\partial u}{\partial t} -\alpha\left(\frac{\partial^2u}{\partial x^2}+\frac{\partial^2u}{\partial y^2}+\frac{\partial^2u}{\partial z^2}\right)=0
+\end{equation}
+
+\begin{equation}
+c_p\rho \int_{x-\Delta x}^{x+\Delta x} [u(\xi,t+\Delta t)-u(\xi,t-\Delta t)]\, d\xi = c_p\rho\int_{t-\Delta t}^{t+\Delta t}\int_{x-\Delta x}^{x+\Delta x} \frac{\partial u}{\partial\tau}\,d\xi \, d\tau
+\end{equation}
+\begin{equation}
+k\int_{t-\Delta t}^{t+\Delta t}\left[\frac{\partial u}{\partial x}(x+\Delta x,\tau)-\frac{\partial u}{\partial x}(x-\Delta x,\tau)\right]\,d\tau = k\int_{t-\Delta t}^{t+\Delta t}\int_{x-\Delta x}^{x+\Delta x}\frac{\partial^2u}{\partial\xi^2}\,d\xi\, d\tau
+\end{equation}
+
+\begin{equation}
+\int_{t-\Delta t}^{t+\Delta t}\int_{x-\Delta x}^{x+\Delta x} [c_p\rho u_\tau - k u_{\xi\xi}]\, d\xi \, d\tau = 0
+\end{equation}
 \end{document}
