--- a/main.tex
+++ b/main.tex
@@ -31,6 +31,8 @@ k\int_{t-\Delta t}^{t+\Delta t}\left[\frac{\partial u}{\partial x}(x+\Delta x,\t
 
 \newpage
 
+hello
+
 \begin{center}
 \Huge{2}
 \end{center}
