--- a/main.tex
+++ b/main.tex
@@ -1,85 +1,77 @@
-\documentclass[a4paper]{article}
+\documentclass[apj]{emulateapj}
+\usepackage{amsmath,amssymb,amstext}
+\usepackage{units}
+\usepackage[backref,breaklinks,colorlinks,citecolor=blue,linkcolor=magenta]{hyperref}
+\usepackage[all]{hypcap} %Links go to figures;breaks on deluxetables
+\usepackage{natbib}
+\bibliographystyle{apj}
 
-\usepackage[english]{babel}
-\usepackage[utf8x]{inputenc}
-\usepackage{amsmath}
-\usepackage{graphicx}
-\usepackage[colorinlistoftodos]{todonotes}
-
-\title{My Paper with Git and Overleaf}
-\author{You}
+\shorttitle{Lightcurves of Peculiar Type II-P SNe}
+\shortauthors{Lusk \& Baron}
 
 \begin{document}
-\maketitle
+
+\title{Bolometric Lightcurves of Peculiar Type II-P Supernovae}
+\author{Jeremy A. Lusk\altaffilmark{1} and Eddie Baron} \affil{Homer L. Dodge Department of Physics and Astronomy, University of Oklahoma, Norman, OK 73019}
+
+\altaffiltext{1}{Math/Natural Science Division, Midland College, Midland, TX 79705}
 
 \begin{abstract}
-Your abstract.
+We examine the bolometric lightcurves of six Type~II-P supernovae which are thought to originate from blue supergiant progenitors.
+
 \end{abstract}
 
 \section{Introduction}
 
-Your introduction goes here! Some examples of commonly used commands and features are listed below, to help you get started. If you have a question, please use the help menu (``?'') on the top bar to search for help or ask us a question. 
+The bolometric luminosity of a supernova is the total radiant luminosity, typically measured in erg s$^{-1}$.
+The variation of this luminosity with time after explosion is the lightcurve, and is an important quantity in the study of transient objects such as supernovae.
+Supernovae are categorized by the shapes of their lightcurves. %TODO: cite Filippenko's review paper
+The shapes of lightcurves also reveal important information about a supernova.
+Hydrodynamic models of expanding supernova ejecta output bolometric lightcurves which can be compared with those of observed supernovae.
+From these comparisons, the model is used to estimate the mass and structure of the progenitor, the total energy of the explosion, and the amount of radioactive $^{56}$Ni synthesized in the supernova.
 
-\section{Some examples to get started}
+Determining the properties of a supernova progenitor by matching its observed bolometric lightcurve to one calculated by a hydrodynamic model is prediacted on the ability to determine the bolometric lightcurve of a supernova in the first place.
+%TODO: Talk about the challenges of obtaining a bolometric lighcurve from observations. Motivate the need for comparing the accuracy of different methods.
 
-\subsection{How to add Comments}
+\section{Methods}
 
-Comments can be added to your project by clicking on the comment icon in the toolbar above. % * <john.hammersley@gmail.com> 2014-09-03T09:54:16.211Z:
-%
-% Here's an example comment!
-%
-To reply to a comment, simply click the reply button in the lower right corner of the comment, and you can close them when you're done.
+The methods for calculating a bolometric lightcurve from observed photometric magnitudes can be classified into two categories: direct integration and polynomial fitting.
 
-\subsection{How to include Figures}
+Direct integtration uses only the observed photometry, converting broad-band filter magnitudes to monochromatic fluxes at wavelengths representative of the filters.
+These fluxes are then integrated, typically using the trapezoidal method, to generate a value often referred to as the quasi-bolometric flux.
+This quasi-bolmetric flux represents only the observed portion of the total spectral energy distribution of the supernova, and does not include flux in the UV or IR.
+The quasi-bolometric flux is typically enhanced by UV and IR corrections - estimates of the missing flux blueward and redward of the observed flux. %TODO JL: Organize a list of references for UV and IR corrections
+Usually, these corrections are made by fitting a blackbody to the observed flux, and integrating that blackbody function from the reddest observed wavelength to infinity, and from the bluest observed wavelength to zero. % TODO JL: What's the earliest reference for this method of correcting the IR flux?
+Because the SED of supernovae are known to depart significantly from that of a blackbody due to line blanketing in the UV, there are a variety of ways that different groups handle UV corrections, which will be discussed in detail below. %TODO JL: Include good reference for UV line blanketing
 
-First you have to upload the image file from your computer using the upload link the project menu. Then use the includegraphics command to include it in your document. Use the figure environment and the caption command to add a number and a caption to your figure. See the code for Figure \ref{fig:frog} in this section for an example.
+Polynomial fitting methods use the bolometric lightcurves of well-observed supernovae (usually calculated using the direct integration technique as mentioned above) to find correlations between an observable quantity such as color and the bolometric correction $BC = m_{bol} - (V - A_V)$.
+With this, magnitudes in a filter band can be converted to bolometric magnitudes, and then into bolometric luminosities.
+By finding polynomails which describe the relationship between color and bolometric correction, the bolometric luminosity of a less well-observed supernova can be calculated simply my making color observations and a distance estimate.
+This assumes, of course, that the same relationship found between the color and bolometric correction of the template supernova exists for the less well-observed supernova.
+Is is therefore important to use several different well-observed supernovae to establish the polynomials used to transform color into a bolometric correction.
 
-\begin{figure}
-\centering
-\includegraphics[width=0.3\textwidth]{frog.jpg}
-\caption{\label{fig:frog}This frog was uploaded via the project menu.}
-\end{figure}
+\section{Results}
 
-\subsection{How to add Tables}
+\subsection{Nickel Mass Estimates}
 
-Use the table and tabular commands for basic tables --- see Table~\ref{tab:widgets}, for example. 
+The post-plateau luminosity of a Type II~P supernova comes primarily from energy deposited by the gamma-rays produced in the decay chain $^{56}$Ni $\rightarrow$ $^{56}$Co $\rightarrow$ $^{56}$Fe.
+We use the $\gamma$-ray specific energy for pure $^{56}$Ni from \cite{sutherland_models_1984}:
 
-\begin{table}
-\centering
-\begin{tabular}{l|r}
-Item & Quantity \\\hline
-Widgets & 42 \\
-Gadgets & 13
-\end{tabular}
-\caption{\label{tab:widgets}An example table.}
-\end{table}
+\begin{equation}
+    s = 3.90 \times 10^{10} e^{-\gamma_1 t} + 6.78 \times 10^{9} \left( e^{-\gamma_2 t} - e^{\gamma_1 t} \right)
+\end{equation}
+where $s$ is in erg s$^{-1}$ g$^{-1}$. The constants $\gamma_1 = \unit[1.32\times10^{-6}]{s^{-1}}$, and $\gamma_2 = \unit[1.02\times10^{-7}]{s^{-1}}$. $\gamma_1$ are the decay rates of $^{56}$Ni and $^{56}$Co, corresponding to half-lives of \unit[6.08]{d} and \unit[78.65]{d}, respectively.
 
-\subsection{How to write Mathematics}
+The nickel mass ejected by the supernova can be estimated by fitting the luminosity of the post-plateau tail with the equation
 
-\LaTeX{} is great at typesetting mathematics. Let $X_1, X_2, \ldots, X_n$ be a sequence of independent and identically distributed random variables with $\text{E}[X_i] = \mu$ and $\text{Var}[X_i] = \sigma^2 < \infty$, and let
-$$S_n = \frac{X_1 + X_2 + \cdots + X_n}{n}
-      = \frac{1}{n}\sum_{i}^{n} X_i$$
-denote their mean. Then as $n$ approaches infinity, the random variables $\sqrt{n}(S_n - \mu)$ converge in distribution to a normal $\mathcal{N}(0, \sigma^2)$.
+\begin{equation}
+    L_{Ni} = sM_{Ni}
+\end{equation}
+In our calculations, we used the \textsc{curve\_fit} function from \textsc{scipy}\footnote{\url{http://www.scipy.org}} \citep{jones_scipy:_2001}
+
+For SN 1998A, the reported mass of $^{56}$Ni in \cite{pastorello_sn_2005} is \unit[0.11]{M$_{\odot}$}.
 
 
-\subsection{How to create Sections and Subsections}
-
-Use section and subsections to organize your document. Simply use the section and subsection buttons in the toolbar to create them, and we'll handle all the formatting and numbering automatically.
-
-\subsection{How to add Lists}
-
-You can make lists with automatic numbering \dots
-
-\begin{enumerate}
-\item Like this,
-\item and like this.
-\end{enumerate}
-\dots or bullet points \dots
-\begin{itemize}
-\item Like this,
-\item and like this.
-\end{itemize}
-
-We hope you find Overleaf useful, and please let us know if you have any feedback using the help menu above.
+\bibliography{bsg_lbol}
 
 \end{document}
