Remove backref from main.tex
This was mucking up overleaf because the generated .brf file had an
invalid extension.

--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 \documentclass[apj]{emulateapj}
 \usepackage{amsmath,amssymb,amstext}
 \usepackage{units}
-\usepackage[backref,breaklinks,colorlinks,citecolor=blue,linkcolor=magenta]{hyperref}
+\usepackage[breaklinks,colorlinks,citecolor=blue,linkcolor=magenta]{hyperref}
 \usepackage[all]{hypcap} %Links go to figures;breaks on deluxetables
 \usepackage{natbib}
 \bibliographystyle{apj}
