Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -17,13 +17,13 @@
 \altaffiltext{1}{Math/Natural Science Division, Midland College, Midland, TX 79705}
 
 \begin{abstract}
-We examine the bolometric lightcurves of six Type~II-P supernovae which are thought to originate from blue supergiant progenitors.
+We examine the bolometric lightcurves of six Type~II-P supernovae which are thought to originate from blue supergiant progenitors. Thank you. How are you?
 
 \end{abstract}
 
 \section{Introduction}
 
-The bolometric luminosity of a supernova is the total radiant luminosity, typically measured in erg s$^{-1}$.
+Alvares The bolometric luminosity of a supernova is the total radiant luminosity, typically measured in erg s$^{-1}$.
 The variation of this luminosity with time after explosion is the lightcurve, and is an important quantity in the study of transient objects such as supernovae.
 Supernovae are categorized by the shapes of their lightcurves. %TODO: cite Filippenko's review paper
 The shapes of lightcurves also reveal important information about a supernova.
