--- a/main.tex
+++ b/main.tex
@@ -11,7 +11,7 @@
 
 \begin{document}
 
-\title{Bolometric Lightcurves of Peculiar Type II-P Supernovae}
+\title{TEST}
 \author{Jeremy A. Lusk\altaffilmark{1} and Eddie Baron} \affil{Homer L. Dodge Department of Physics and Astronomy, University of Oklahoma, Norman, OK 73019}
 
 \altaffiltext{1}{Math/Natural Science Division, Midland College, Midland, TX 79705}
