Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
 \documentclass[apj]{emulateapj}
-\usepackage{amsmath,amssymb,amstext}
+\usepackage{amsmath,amssymb,amstext,color,colortbl}
 \usepackage{units}
 \usepackage[breaklinks,colorlinks,citecolor=blue,linkcolor=magenta]{hyperref}
 \usepackage[all]{hypcap} %Links go to figures;breaks on deluxetables
@@ -73,5 +73,7 @@ For SN 1998A, the reported mass of $^{56}$Ni in \cite{pastorello_sn_2005} is \un
 
 
 \bibliography{bsg_lbol}
+
+
 
 \end{document}
