--- a/main.tex
+++ b/main.tex
@@ -18,6 +18,7 @@
 
 \begin{abstract}
 We examine the bolometric lightcurves of six Type~II-P supernovae which are thought to originate from blue supergiant progenitors. Thank you. How are you?
+Fine, thanks.
 
 \end{abstract}
 
