Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -22,8 +22,7 @@ Fine, thanks.
 
 \end{abstract}
 
-\section{Introduction}
-
+\section{
 Alvares The bolometric luminosity of a supernova is the total radiant luminosity, typically measured in erg s$^{-1}$.
 The variation of this luminosity with time after explosion is the lightcurve, and is an important quantity in the study of transient objects such as supernovae.
 Supernovae are categorized by the shapes of their lightcurves. %TODO: cite Filippenko's review paper
