--- a/Streaming/streaming.tex
+++ b/Streaming/streaming.tex
@@ -175,7 +175,7 @@
 	\begin{figure}
 		\centering
 		\includegraphics[scale=0.7]{uncorrectedvstrue}
-		\caption{Characterising the relative line-of-sight velocity distribution}
+		\caption{Uncorrected}
 		\label{fig:old_str}
 	\end{figure}
 	
