--- a/Streaming/streaming.tex
+++ b/Streaming/streaming.tex
@@ -321,13 +321,13 @@
 	
 	
 	
-	\begin{figure*}
-		\centering
-		\includegraphics[scale=0.9]{rel_los_halo_components}
-		\caption{Relative line-of-sight velocity distribution for different components. Green dashed line refers to the pairs which are comprised of 2 halo particles, blue dash dotted line refers to the pair which are formed by 2 field particles and finally magenta dotted line showcases the distribution contributed by pairs in which one of the particle is a field particle and the other a halo particle. The distribution of the full particles is shown using the red solid line. The distance mentioned in each subplot refers to the mean value of each bin, having a bin width of 1 $h^{-1}$ Mpc.}
-		\label{fig:rel_los_halo_comp}
-	\end{figure*}
-	
+%	\begin{figure*}
+%		\centering
+%		\includegraphics[scale=0.9]{rel_los_halo_components}
+%		\caption{Relative line-of-sight velocity distribution for different components. Green dashed line refers to the pairs which are comprised of 2 halo particles, blue dash dotted line refers to the pair which are formed by 2 field particles and finally magenta dotted line showcases the distribution contributed by pairs in which one of the particle is a field particle and the other a halo particle. The distribution of the full particles is shown using the red solid line. The distance mentioned in each subplot refers to the mean value of each bin, having a bin width of 1 $h^{-1}$ Mpc.}
+%		\label{fig:rel_los_halo_comp}
+%	\end{figure*}
+%	
 	\begin{figure*}
 		\centering
 		\includegraphics[scale=0.9]{rel_los_mass_components}
